# ros2-avanzado

./: README.md
actions/: CMakeLists.txt  package.xml
actions/include/: challenge_client.hpp  challenge_server.hpp  count_until_client.hpp  count_until_server.hpp  count_until_server_queue_goals.hpp
actions/src/: challenge_client.cpp  challenge_server.cpp  count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goals.cpp
lifecycle_cpp/: CMakeLists.txt  package.xml
lifecycle_cpp/include/: lifecycle_challenge_server.hpp  lifecycle_manager.hpp  number_publisher.hpp
lifecycle_cpp/src/: lifecycle_challenge_server.cpp  lifecycle_manager.cpp  number_publisher.cpp
my_robot_advanced_bringup/: CMakeLists.txt  package.xml
my_robot_advanced_bringup/launch/: lifecycle_challenge.launch.xml
my_robot_advanced_interfaces/: CMakeLists.txt  package.xml
my_robot_advanced_interfaces/action/: ActionsChallenge.action
my_robot_advanced_interfaces/msg/: CancelMoveChallenge.msg
my_robot_interfaces/: package.xml
my_robot_interfaces/action/: CountUntil.action
templates/: README.md
templates/actions_cpp/: CMakeLists.txt
templates/actions_cpp/include/: count_until_client.hpp  count_until_server.hpp
templates/actions_cpp/src/: count_until_client.cpp  count_until_server.cpp
templates/nodo_cpp/: node.cpp  node.hpp
